force-app/main/default/objects/SK_ACH_Capital_Call_Line__c/SK_ACH_Capital_Call_Line__c.object-meta.xml
<CustomObject>
    <label>Capital Call Line</label>
    <nameField>
        <displayFormat>CCL-{0000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Call Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>