force-app/main/default/objects/SK_ACH_Capital_Call_Line__c/fields/SK_ACH_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Amount_Outstanding__c</fullName>
    <description>Line Amount minus Amount Paid</description>
    <formula>SK_ACH_Line_Amount__c - SK_ACH_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>