force-app/main/default/objects/SK_ACH_Capital_Call_Line__c/fields/SK_ACH_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <description>Actual amount received</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>