force-app/main/default/objects/SK_ACH_Capital_Call_Line__c/fields/SK_ACH_Capital_Call__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Capital_Call__c</fullName>
    <description>Parent Capital Call</description>
    <label>Capital Call</label>
    <referenceTo>SK_ACH_Capital_Call__c</referenceTo>
    <relationshipLabel>Capital Call Lines</relationshipLabel>
    <relationshipName>Capital_Call_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>