force-app/main/default/objects/SK_ACH_Capital_Call_Line__c/fields/SK_ACH_Commitment__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Commitment__c</fullName>
    <label>Commitment</label>
    <description>Investor commitment being drawn</description>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>SK_ACH_Commitment__c</referenceTo>
    <relationshipLabel>Capital Call Lines</relationshipLabel>
    <relationshipName>Capital_Call_Lines</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>