force-app/main/default/objects/SK_ACH_Capital_Call_Line__c/fields/SK_ACH_Line_Notes__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Line_Notes__c</fullName>
    <label>Notes</label>
    <description>Payment notes or issues</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>