force-app/main/default/objects/SK_ACH_Capital_Call_Line__c/fields/SK_ACH_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Payment_Date__c</fullName>
    <description>Date payment was received</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>