force-app/main/default/objects/SK_ACH_Capital_Call_Line__c/fields/SK_ACH_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Payment_Method__c</fullName>
    <label>Payment Method</label>
    <description>How payment was received</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wire Transfer</fullName>
                <default>true</default>
                <label>Wire Transfer</label>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>