force-app/main/default/objects/SK_ACH_Capital_Call_Line__c/validationRules/Amount_Paid_Cannot_Exceed_Line_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Paid_Cannot_Exceed_Line_Amount</fullName>
    <active>true</active>
    <description>Amount paid cannot exceed the line amount</description>
    <errorConditionFormula>SK_ACH_Amount_Paid__c &gt; SK_ACH_Line_Amount__c</errorConditionFormula>
    <errorDisplayField>SK_ACH_Amount_Paid__c</errorDisplayField>
    <errorMessage>Amount paid cannot exceed line amount.</errorMessage>
</ValidationRule>