force-app/main/default/objects/SK_ACH_Capital_Call_Line__c/validationRules/Line_Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Line_Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Capital call line amount must be greater than zero</description>
    <errorConditionFormula>SK_ACH_Line_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Line amount must be greater than zero.</errorMessage>
</ValidationRule>